--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.14.0",
     "knex": "^0.12.2",
     "mocha": "^3.1.0",
+    "nodemon": "^1.10.2",
     "pg": "^6.1.0",
     "supertest": "^2.0.0"
   },
