--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JeannieYamakawa/2nd_reddit#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "ejs": "^2.5.2",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "knex": "^0.12.2",
+    "locus": "^1.2.0",
     "method-override": "^2.3.6",
     "mocha": "^3.1.0",
     "morgan": "^1.7.0",
