--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "knex": "^0.12.2",
+    "method-override": "^2.3.6",
     "mocha": "^3.1.0",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
