--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
+    "cookie-session": "^2.0.0-alpha.1",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "knex": "^0.12.2",
